creusot/tests/should_fail/terminates/loops_in_terminates.stderr
error: `#[terminates]` function must not contain loops.
 --> loops_in_terminates.rs:6:1
  |
6 | fn terminates_while_loop() {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: looping occurs here
 --> loops_in_terminates.rs:8:5
  |
8 |     while true {}
  |     ^^^^^^^^^^^^^

error: `#[terminates]` function must not contain loops.
  --> loops_in_terminates.rs:12:1
   |
12 | fn terminates_loop_loop() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: looping occurs here
  --> loops_in_terminates.rs:13:5
   |
13 |     loop {}
   |     ^^^^^^^

error: aborting due to 2 previous errors

